# Opengl-RayTracing

./: CMakeLists.txt  README.md  diff
data/: hall01.mtl  material.lib
data/shaders/: fragmentshader.fs  fragmentshader2.fs  model_loading.fs  model_loading.vs  vertexshader.vs  vertexshader2.vs
src/: BVHnode.h  CMakeLists.txt  Hand.vcxproj  Hand.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Shader.h  aabb.h  camera.h  cmake_install.cmake  config.h  gl_env.h  hitresult.h  main.cpp  material.h  objloader.h  randomtools.h  ray.h  renderdoc_app.h  scene.h  shape.h  sphere.h  triangle.h
src/Debug/: Hand.exp  Hand.lib
src/Hand.dir/Debug/Hand.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hand.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
